--- a/src/content/blog/how-do-you-test-an-interactive-breakdown-of-your-imessages-habits.mdx
+++ b/src/content/blog/how-do-you-test-an-interactive-breakdown-of-your-imessages-habits.mdx
@@ -7,6 +7,7 @@ display: false
 no_hero: true
 unlisted: true
 ---
+import { Image } from 'astro:assets';
 
 import Visualizer from '../../blog/how-do-you-test-an-interactive-breakdown-of-your-imessages-habits/Visualizer.tsx'
 import PlatformWarning from '../../blog/how-do-you-test-an-interactive-breakdown-of-your-imessages-habits/PlatformWarning.tsx'
@@ -21,18 +22,50 @@ This is an interactive data visualization where you can draw insights from you i
 
 <PlatformWarning client:load />
 
-If you are **on a Mac**, all of your iMessage data is stored on a local database `chat.db` located in your `~/Library/Messages` directory. The library directory is hidden by default, so the easiest way to access it is to copy it to your desktop.[^1]
+If you are **on a Mac**, all of your iMessage data is stored on a local database `chat.db` located in your `~/Library/Messages` directory. The library directory is hidden by default, so getting it can be a little tricky.
 
-The easiest way to do this is to open up your Terminal app and paste the following command:
+1. Open Finder. You should see the toolbar at the top of the screen.
 
-```
-cp ~/Library/Messages/chat.db ~/Desktop
-```
+import finder from '../../blog/how-do-you-test-an-interactive-breakdown-of-your-imessages-habits/screenshots/finder.png';
 
-This uses the copy, `cp`, command to copy the `chat.db` file from your `~/Library/Messages` directory to your desktop. Using copy is the command-line equivalent of dragging and dropping the file from your `~/Library/Messages` directory to your desktop.
+<figure>
+  <Image src={finder} alt="Finder" />
+  <figcaption>Finder Toolbar</figcaption>
+</figure>
 
-After running this command, you should see a `chat.db` file on your desktop. You can then upload this file to the visualizer below.
+2. Click on `Go` in the toolbar.
 
+import finder_toolbar from '../../blog/how-do-you-test-an-interactive-breakdown-of-your-imessages-habits/screenshots/finder_toolbar.png';
+
+<figure>
+  <Image src={finder_toolbar} alt="Finder Toolbar" />
+  <figcaption>Finder Toolbar</figcaption>
+</figure>
+
+3. Navigate down to the bottom of the dropdown and click on `Go to Folder...`
+
+import goto_folder from '../../blog/how-do-you-test-an-interactive-breakdown-of-your-imessages-habits/screenshots/goto_folder.png';
+
+<figure>
+  <Image src={goto_folder}
+  alt="Go to Folder" />
+  <figcaption>Go to Folder</figcaption>
+</figure>
+
+4. Go to the search bar and type `~/Library/Messages` into the search bar.
+
+import file_selected from '../../blog/how-do-you-test-an-interactive-breakdown-of-your-imessages-habits/screenshots/file_selected.png';
+
+<figure>
+  <Image src={file_selected} alt="Go to Folder" />
+  <figcaption>Go to Folder</figcaption>
+</figure>
+
+This navigates to the special folder where you iMessage data is stored. 
+
+5. Find the `chat.db` file and copy it to your Desktop[^1]
+6. Click on the upload file button below and select the `chat.db` file you just copied.
+7. Wait for the data to load (~ 30-60 seconds)
 
 <Visualizer client:load />
 
@@ -59,5 +92,4 @@ I'm sorry, I can't help you with that. However, here are some resources to get y
 </ul>
 </details>
 
----
-[^1]: Note: this only works if you are on a Mac
+[^1]: Where you copy the folder is not important. However you have to copy your `chat.db` somewhere as Apple forbids direct uploads from the `Library` folder. 
