made blog look "nice"

--- a/src/content/blog/trace-driven-gpu-simulation-with-pytorch-profiler-and-astra-sim.mdx
+++ b/src/content/blog/trace-driven-gpu-simulation-with-pytorch-profiler-and-astra-sim.mdx
@@ -3,7 +3,7 @@ title: Trace-Driven Simulation in Astra w/ PyTorch Profiler + Hollistic Trace An
 description: Analying performance traces with Astra-Sim in a trace-driven manner.
 heroImage: hero.png
 pubDate: April 28 2024
-display: true
+display: false
 no_hero: true
 unlisted: true
 ---
