--- a/src/content/blog/binary-to-hex-pratice.mdx
+++ b/src/content/blog/binary-to-hex-pratice.mdx
@@ -2,7 +2,7 @@
 title: Binary to Hex to Decimal Practice
 description: A basic type-racer style game to pratice converting binary to hexidecimal and decimal. Get to know different number systems like the back of your hand.
 heroImage: hero.png
-pubDate: Dec 1 2024
+pubDate: April 28 2024
 display: true
 no_hero: true
 ---
@@ -13,3 +13,4 @@ import { Game } from '../../blog/binary-to-hex-pratice/Game.tsx'
 
 ## Motivation
 
+In my computer architecture class, I often found myself getting concepts right, but losing points because of simple arithmetic mistakes when converting between number systems. I am a borderline typeracer addict, so I thought why not make a similar quiz-style game for getting faster at converting between binary, hexidecimal, octal and decimal numbers.
