--- a/src/content/blog/binary-to-hex-pratice.mdx
+++ b/src/content/blog/binary-to-hex-pratice.mdx
@@ -7,7 +7,7 @@ display: true
 no_hero: true
 ---
 
-import { Game } from '../../blog/binary-to-hex-pratice/Game.tsx'
+import { Game } from "../../blog/binary-to-hex-pratice/Game.tsx";
 
 <Game client:load />
 
