--- a/src/content/blog/uva-tools-club-finder.mdx
+++ b/src/content/blog/uva-tools-club-finder.mdx
@@ -6,8 +6,8 @@ heroImage: hero.webp
 display: false
 ---
 
-Find clubs at UVA based on your interests, not just keywords. 
+Find clubs at UVA based on your interests, not just keywords.
 
-import SearchClubs from '../../blog/uva-tools-club-finder/SearchClubs';
+import SearchClubs from "../../blog/uva-tools-club-finder/SearchClubs";
 
 <SearchClubs client:load />
